--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,17 +25,19 @@ jobs:
         ports:
           # Maps port 6379 on service container to the host
           - 6379:6379
+    strategy:
+      matrix:
+        sidekiq-version: ["7", "8"]
     env:
-      BUNDLE_VERSION: "~> 2.1.4"
+      BUNDLE_VERSION: "~> 2.7.2"
       BUNDLE_GEMS__CONTRIBSYS__COM: ${{ secrets.BUNDLE_GEMS__CONTRIBSYS__COM }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Install Ruby and gems
+        uses: actions/checkout@v5
+      - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.5'
+          ruby-version: "3.3.7"
           bundler-cache: true
-      - name: Run tests
-        run: |
-          bundle exec rake ci:specs
+      - name: Install dependencies and Run tests
+        run: bundle exec rake test:sidekiq${{ matrix.sidekiq-version }}
